--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,5 @@ jobs:
     - uses: actions/checkout@v1
       with:
         path: ./src/github.com/neilpa/yajsv
-    - name: Build
-      run: go build -v ./...
-    - name: Test
-      run: go test ./...
+    - name: Test & Build
+      run: make ci
