--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,4 @@ jobs:
       with:
         path: ./src/github.com/neilpa/yajsv
     - name: Build
-      run: go build -v ./...
-    - name: Test
-      run: go test ./...
+      run: make ci
