--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,6 @@ jobs:
         path: ./src/github.com/neilpa/yajsv
     - name: Build
       run: make ci
+    - name: List Files
+      shell: bash
+      run: ls -altr
